--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang Web Mẫu</title>
-</head>
-<body>
-    <h1>Xin chào! Đây là trang web đầu tiên của tôi.</h1>
-</body>
-</html>
+   <html lang="en">
+   <head>
+       <meta charset="UTF-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <title>Trang Web Mẫu</title>
+   </head>
+   <body>
+       <h1>Xin chào! Đây là trang web đầu tiên của tôi.</h1>
+       <p>Đây là nội dung được thêm vào trên nhánh dev</p>
+   </body>
+   </html>
